added example env and cors to the app

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
 # Example .env configuration for the backend
 
+MONGODB_URL = "your_hosted_mongodb_url"
+PORT = <PORT YOU WANT TO RUN THE BACKEND ON>
